--- a/src/_global.module.scss
+++ b/src/_global.module.scss
@@ -27,7 +27,7 @@ h1 {
 h2 {
   font-family: s.$PrimaryFont;
   color: s.$PurpleColor;
-  text-decoration: underline 1px solid white;
+  // text-decoration: underline 1px solid white;
   font-size: 2rem;
 }
 
