--- a/src/_variables.scss
+++ b/src/_variables.scss
@@ -8,6 +8,5 @@ $WhiteText: #faf8ff;
 ////////////// FONTS ///////////////////
 $PrimaryFont: "Montserrat", sans-serif;
 $LogoFont: "Grape Nuts", cursive;
-// $SecondaryFont: "Grape Nuts", cursive;
-// $SecondaryFont: "Caveat", cursive;
-$SecondaryFont: "Indie Flower", cursive;
+$SecondaryFont: "Kalam", cursive;
+// $SecondaryFont: "Indie Flower", cursive;
