--- a/src/components/projects/_projects.module.scss
+++ b/src/components/projects/_projects.module.scss
@@ -87,6 +87,7 @@
 
     .project-more {
       width: 100px;
+      padding: 2px;
       border-radius: 20px;
       background-color: s.$WhiteText;
       font-family: s.$SecondaryFont;
@@ -152,6 +153,7 @@
     }
 
     .card-back-btns {
+      padding: 5px;
       width: 75px;
       border-radius: 20px;
       background-color: s.$WhiteText;
