--- a/src/components/projects/_projects.module.scss
+++ b/src/components/projects/_projects.module.scss
@@ -29,12 +29,10 @@
 
 .projects {
   display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  margin: 20px auto;
-  width: 100%;
-  height: 100%;
+  flex-direction: row;
+  flex-wrap: wrap;
+  margin: 20px;
+  justify-content: space-evenly;
   max-width: 1440px;
   transition: 1s;
 }
@@ -210,6 +208,10 @@
 @media (min-width: 1440px) {
   .projects {
     flex-direction: row;
-    justify-content: space-around;
+    justify-content: center;
+  }
+
+  .card-1 {
+    margin: 20px;
   }
 }
