--- a/src/components/about/_about.module.scss
+++ b/src/components/about/_about.module.scss
@@ -19,6 +19,10 @@
     width: 90%;
     height: 100%;
 
+    h2 {
+      padding-bottom: 40px;
+    }
+
     a {
       text-decoration: none;
     }
